syntax = "proto3";

option csharp_namespace = "Company.Shared.Clients.ProductService.Protos";

package product;

import "google/protobuf/empty.proto";

// ---- View models ----

message ProductView {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}

message ProductListView {
  repeated ProductView items = 1;
}

// ---- Requests ----

message GetProductRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string description = 3;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}

message DeleteProductRequest {
  int32 id = 1;
}

message ListProductsRequest {}

// ---- Service ----

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductView);
  rpc CreateProduct (CreateProductRequest) returns (ProductView);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductView);
  rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty);
  rpc ListProducts (ListProductsRequest) returns (ProductListView);
}
